# OmniGS-fork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cfg/colmap/: gaussian_splatting.yaml
cfg/lonlat/: 360roam_lonlat.yaml  360roam_lonlat_fullres.yaml  egonerf_lonlat_omniblender.yaml  egonerf_lonlat_roam360.yaml
cfg/view_only/: camera_lonlat.yaml  camera_lonlat_360roam.yaml  view_only.yaml  view_only_white_bg.yaml
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  operate_points.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h  stereo_vision.h
examples/: simple_cloud.cpp  test_openmvg_lonlat.cpp  train_360roam.cpp  train_egonerf_omniblender.cpp  train_egonerf_ricoh360.cpp  train_openmvg_lonlat.cpp  view_result.cpp
include/: camera.h  gaussian_keyframe.h  gaussian_mapper.h  gaussian_model.h  gaussian_parameters.h  gaussian_rasterizer.h  gaussian_renderer.h  gaussian_scene.h  gaussian_trainer.h  general_utils.h  graphics_utils.h  loss_utils.h  operate_points.h  point2d.h  point3d.h  point_cloud.h  rasterize_points.h  stereo_vision.h  tensor_utils.h  types.h
scripts/: 360roam_run.py  360roam_test_fullres.py  360roam_to_openmvg_lonlat_pose_known.sh  360roam_to_openmvg_test.py  360roam_to_openmvg_train.py  egonerf_render.py  egonerf_render_roam360.py  egonerf_render_synthetic360.py  egonerf_run.py  egonerf_run_roam360.py  egonerf_run_synthetic360.py  egonerf_run_synthetic360_2.py  egonerf_scene_list_omniblender.txt  egonerf_scene_list_ricoh360.txt  egonerf_scene_list_roam360.txt  egonerf_scene_list_synthetic360.txt  egonerf_scene_list_synthetic360_2.txt  egonerf_to_openmvg_lonlat.sh  egonerf_to_openmvg_omniblender.py  egonerf_to_openmvg_test_ricoh360.py  egonerf_to_openmvg_test_synthetic360.py  egonerf_to_openmvg_train_ricoh360.py  egonerf_to_openmvg_train_synthetic360.py  view_lonlat.sh
src/: gaussian_keyframe.cpp  gaussian_mapper.cpp  gaussian_model.cpp  gaussian_parameters.cpp  gaussian_rasterizer.cpp  gaussian_renderer.cpp  gaussian_scene.cpp  gaussian_trainer.cpp  operate_points.cu  rasterize_points.cu  stereo_vision.cu
viewer/: drawer_utils.h  imgui_viewer.cpp  imgui_viewer.h
